[gd_scene load_steps=19 format=2]

[ext_resource path="res://title/buttons/button_quit.tscn" type="PackedScene" id=1]
[ext_resource path="res://title/more_titels/main_title.tscn" type="PackedScene" id=2]
[ext_resource path="res://title/buttons/button_play.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/PixeloidSans-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://title/buttons/button_skin.tscn" type="PackedScene" id=5]
[ext_resource path="res://title/title.gd" type="Script" id=6]
[ext_resource path="res://sound/Of Far Different Nature - Oldskool (CC0).mp3" type="AudioStream" id=7]
[ext_resource path="res://sound/Select_007.wav" type="AudioStream" id=8]
[ext_resource path="res://title/options/options.tscn" type="PackedScene" id=9]
[ext_resource path="res://enviroment/star_move/stars_move.tscn" type="PackedScene" id=10]
[ext_resource path="res://title/parallax/parallax2.tscn" type="PackedScene" id=11]
[ext_resource path="res://title/Whatsapp.png" type="Texture" id=12]
[ext_resource path="res://title/Telegram.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 3
outline_color = Color( 0.32549, 0, 0.482353, 0.988235 )
extra_spacing_char = 3
font_data = ExtResource( 4 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/PixeloidSans-Bold.ttf"

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://fonts/PixeloidSans-Bold.ttf"

[sub_resource type="DynamicFont" id=5]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 4 )

[node name="title" type="Node"]
script = ExtResource( 6 )

[node name="parallax" parent="." instance=ExtResource( 11 )]

[node name="stars_move" parent="." instance=ExtResource( 10 )]

[node name="options" parent="." instance=ExtResource( 9 )]

[node name="title_margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 155.0
margin_right = -40.0
margin_bottom = -222.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0

[node name="menu" type="VBoxContainer" parent="title_margin"]
margin_right = 520.0
margin_bottom = 383.0
custom_constants/separation = 30

[node name="main_title" parent="title_margin/menu" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_left = 45.0
margin_right = 475.0
margin_bottom = 128.0
size_flags_horizontal = 4

[node name="button_play" parent="title_margin/menu" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 158.0
margin_right = 520.0
margin_bottom = 213.0
custom_fonts/font = SubResource( 1 )
keep_pressed_outside = false

[node name="button_skin" parent="title_margin/menu" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 243.0
margin_right = 520.0
margin_bottom = 298.0

[node name="button_quit" parent="title_margin/menu" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_top = 328.0
margin_right = 520.0
margin_bottom = 383.0
custom_fonts/font = SubResource( 1 )
keep_pressed_outside = false

[node name="back_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -9.0
autoplay = true

[node name="focus_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0

[node name="bot_title" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -33.0
margin_right = -3.0
margin_bottom = -3.0

[node name="mesage" type="Label" parent="bot_title"]
margin_top = 10.0
margin_right = 184.0
margin_bottom = 30.0
size_flags_horizontal = 2
size_flags_vertical = 8
custom_fonts/font = SubResource( 3 )
text = "thanks for playing"

[node name="nuber" type="Label" parent="bot_title"]
margin_left = 413.0
margin_top = 12.0
margin_right = 537.0
margin_bottom = 30.0
size_flags_horizontal = 0
size_flags_vertical = 8
custom_fonts/font = SubResource( 5 )
text = "+53 51966853"

[node name="whatsap" type="TextureRect" parent="bot_title"]
margin_left = 541.0
margin_top = 6.0
margin_right = 565.0
margin_bottom = 30.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource( 12 )

[node name="telegram" type="TextureRect" parent="bot_title"]
margin_left = 569.0
margin_top = 6.0
margin_right = 593.0
margin_bottom = 30.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource( 13 )

[connection signal="pressed" from="options/sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="options/music" to="." method="_on_music_pressed"]
[connection signal="mouse_entered" from="title_margin/menu/button_play" to="." method="_on_but_mouse_entered"]
[connection signal="pressed" from="title_margin/menu/button_play" to="." method="_on_button_play_pressed"]
[connection signal="mouse_entered" from="title_margin/menu/button_quit" to="." method="_on_but_mouse_entered"]
[connection signal="pressed" from="title_margin/menu/button_quit" to="." method="_on_button_quit_pressed"]

[editable path="options"]
